@@ -1,18 +1,28 @@
 package net.layla.pres;
 
 import net.layla.dao.IDao;
+import net.layla.metier.IMetier;
 
 import java.io.File;
 import java.io.FileNotFoundException;
+import java.lang.reflect.Method;
 import java.util.Scanner;
 
 public class Pres2 {
-    public static void main(String[] args) throws FileNotFoundException, ClassNotFoundException, IllegalAccessException, InstantiationException {
+    public static void main(String[] args) throws FileNotFoundException, ClassNotFoundException, IllegalAccessException, InstantiationException, NoSuchMethodException, java.lang.reflect.InvocationTargetException {
         Scanner scanner = new Scanner(new File("config.txt"));
         String daoClassName = scanner.nextLine();
         Class cDao = Class.forName(daoClassName);
-        IDao dao= (IDao) cDao.newInstance();
-        System.out.println(dao.getData());
+        IDao d= (IDao) cDao.newInstance();
+
+        String metierClassName = scanner.nextLine();
+        Class cMetier = Class.forName(metierClassName);
+        //IMetier metier= (IMetier) cMetier.getConstructor(IDao.class).newInstance(d);
+        IMetier metier = (IMetier) cMetier.getConstructor().newInstance();
+        Method setDao = cMetier.getDeclaredMethod("setDao", IDao.class);
+        setDao.invoke(metier,d);
+
+        System.out.println("RES="+metier.calcul());
 
     }
 }
